--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     .card h2{color:#2b3350;font-size:1.05rem;margin-bottom:6px;}
     .desc{color:#556;line-height:1.35;margin:0 0 10px 0;font-size:.93rem;}
     .chart{width:100%;}
-
     @media (max-width: 980px){
       .kpis{grid-template-columns:1fr;}
     }
@@ -169,7 +168,7 @@ const PLACE = ["Otthon","Iskola/Egyetem","Munkahely","Mobil útközben","Közter
 const PURPOSE = ["Csevegés/infó","Tanulás","Kódolás","Képgenerálás","Keresés/összegzés","Ötletelés/írás"];
 const FREQ = ["Napi","Heti többször","Heti 1x","Ritkán"];
 
-/* országnevek igazítva a vega-datasets "countries.json" neveihez */
+/* országnevek: egyezzenek a data/countries.json "name" mezőivel */
 const COUNTRIES = [
   "Hungary","Romania","Germany","France","United Kingdom","Italy","Spain","Netherlands",
   "Poland","Czech Republic","Austria","Sweden","Norway","Denmark","Portugal","Greece",
@@ -355,57 +354,55 @@ function barCountByAgeSpec(rowsYes, freq, title){
   };
 }
 
-/* TÉRKÉP – “nincs adat” országok szürkék */
+/* ====== 4) TÉRKÉP – helyi fájlokból ====== */
 function mapSpec(countryValues){
   return {
     ...baseConfig(),
     "width":"container",
     "height":380,
     "projection":{"type":"equalEarth"},
-    "layer":[
+    "data":{
+      "url":"data/world-110m.json",
+      "format":{"type":"topojson","feature":"countries"}
+    },
+    "transform":[
       {
-        "data":{
-          "url":"https://vega.github.io/vega-datasets/data/world-110m.json",
-          "format":{"type":"topojson","feature":"countries"}
-        },
-        "transform":[
-          {
-            "lookup":"id",
-            "from":{
-              "data":{"url":"https://vega.github.io/vega-datasets/data/countries.json"},
-              "key":"id",
-              "fields":["name"]
-            }
-          },
-          {
-            "lookup":"name",
-            "from":{
-              "data":{"values": countryValues},
-              "key":"country",
-              "fields":["value","total","yes"]
-            }
-          }
-        ],
-        "mark":{"type":"geoshape","stroke":"#ffffff"},
-        "encoding":{
-          "color":{
-            "condition":{
-              "test":"isValid(datum.value)",
-              "field":"value",
-              "type":"quantitative",
-              "title":"AI-használók aránya (%)"
-            },
-            "value":"#e9f2ff"
-          },
-          "tooltip":[
-            {"field":"name","type":"nominal","title":"Ország"},
-            {"field":"value","type":"quantitative","title":"AI-használók aránya (%)","format":".1f"},
-            {"field":"yes","type":"quantitative","title":"AI-használók (db)"},
-            {"field":"total","type":"quantitative","title":"Összes (db)"}
-          ]
+        "lookup":"id",
+        "from":{
+          "data":{"url":"data/countries.json"},
+          "key":"id",
+          "fields":["name"]
         }
-      }
-    ]
+      },
+      {
+        "lookup":"name",
+        "from":{
+          "data":{"values": countryValues},
+          "key":"country",
+          "fields":["value","total","yes"]
+        }
+      },
+      {"filter":"isValid(datum.name)"}  // csak azonosított országok
+    ],
+    "mark":{"type":"geoshape","stroke":"#ffffff"},
+    "encoding":{
+      "color":{
+        "condition":{
+          "test":"isValid(datum.value)",
+          "field":"value",
+          "type":"quantitative",
+          "title":"AI-használók aránya (%)",
+          "scale":{"zero":false}
+        },
+        "value":"#e9f2ff"
+      },
+      "tooltip":[
+        {"field":"name","type":"nominal","title":"Ország"},
+        {"field":"value","type":"quantitative","title":"AI-használók aránya (%)","format":".1f"},
+        {"field":"yes","type":"quantitative","title":"AI-használók (db)"},
+        {"field":"total","type":"quantitative","title":"Összes (db)"}
+      ]
+    }
   };
 }
 
@@ -468,11 +465,11 @@ async function renderAll(){
     .sort((a,b)=>PLACE.indexOf(a.category)-PLACE.indexOf(b.category));
   await vegaEmbed("#vis3", barPctSpec(v3, "Hol használják a legtöbbet? (%)", "Helyszín", "Arány (%)"), {actions:false});
 
-  // 4 (map)
+  // 4
   const mapValues = countryUsePct(all);
   await vegaEmbed("#vis4", mapSpec(mapValues), {actions:false});
 
-  // 5 (purpose)
+  // 5
   const placePick = document.getElementById("place5").value;
   const yes5 = (placePick==="ALL") ? yes : yes.filter(d=>d.place===placePick);
   const v5 = percentByCategory(yes5, "purpose")
@@ -480,7 +477,7 @@ async function renderAll(){
     .sort((a,b)=>b.value-a.value);
   await vegaEmbed("#vis5", barPctSpec(v5, "Mire használják? (%)", "Felhasználási cél", "Arány (%)"), {actions:false});
 
-  // 6 (heatmap)
+  // 6
   await vegaEmbed("#vis6", heatmapSpec(yes), {actions:false});
 }
 
